--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -14,10 +14,12 @@
 </header>
 <nav>
     <a href='/'>Home</a>
-    <!-- Add a link to the new form -->
     <a href='/snippet/create'>Create snippet</a>
 </nav>
 <section>
+    {{with .Flash}}
+    <div class='flash '>{{.}}</div>
+    {{end}}
     {{template "body" .}}
 </section>
 {{template "footer" .}}
